corrected alignment of the social media icons

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -220,13 +220,16 @@ img{
   color: var(--first-color);
 }
 .home__social{
-  display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  align-self: flex-end;
+  
 }
 .home__social-icon{
+
   width: max-content;
   margin-bottom: var(--mb-1);
   font-size: 1.5rem;
+  margin-right: 1rem;
  
   color: var(--second-color);
 }
